# wibotic_ros

./: README.md
.github/workflows/: run-unit-tests.yaml
wibotic_connector_can/: CMakeLists.txt  README.md  package.xml
wibotic_connector_can/cmake/: SuperBuild.cmake
wibotic_connector_can/include/wibotic_connector_can/: wibotic_can_driver.hpp  wibotic_can_driver_node.hpp
wibotic_connector_can/include/wibotic_connector_can/uavcan_types/wibotic/: WiBoticInfo.hpp
wibotic_connector_can/launch/: wibotic_connector_can.launch
wibotic_connector_can/src/: main.cpp  script.cpp  wibotic_can_driver.cpp  wibotic_can_driver_node.cpp
wibotic_connector_can/test/integration/: wibotic_connector_can.test.py
wibotic_connector_can/test/unit/: test_wibotic_can_driver_node.cpp
wibotic_msg/: CMakeLists.txt  package.xml
wibotic_msgs/: CMakeLists.txt  package.xml
